# software-renderer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  shell.html  vercel.json
build-web/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
src/: Camera.h  CameraS.h  Components.h  GameObject.h  Math.h  MathS.h  OBJLoader.h  Renderer.cpp  Renderer.h  Texture.h  ThreadPool.h  main.cpp
